--- a/account.html
+++ b/account.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Email</title>
+  <title>Document</title>
   <style>
     :root {
       --white: #FFFFFF;
@@ -33,7 +33,6 @@
       display: grid;
       grid-template-rows: auto 1fr auto;
       width: 300px;
-      justify-items: center;
     }
 
     .logo {
@@ -45,44 +44,36 @@
 
     .title {
       font-size: var(--lg);
-      margin-bottom: 12px;
-      text-align: center;
+      margin-bottom: 36px;
+      text-align: start;
     }
 
-    .subtitle {
-      color: var(--very-light-pink);
-      font-size: var(--md);
-      font-weight: 300;
-      margin-top: 0;
-      margin-bottom: 32px;
-      text-align: center;
-    }
 
-    .email-image{
-      width: 132px;
-      height: 132px;
-      border-radius: 50%;
-      border-color: var(--text-input-field);
+    .form {
       display: flex;
-      justify-content: center;
-      align-items: center;
-      margin-bottom: 25px;
+      flex-direction: column;
     }
 
-    .email-image img{
-      width: 80px;
-    }
-    .resend{
+    .label {
       font-size: var(--sm);
-    }
-    .resend span{
-      color: var(--very-light-pink);
-      text-decoration: none;
+      font-weight: bold;
+      margin-bottom: 4px;
     }
 
-    .resend a{
-      color: var(--hospital-green);
-      text-decoration: none;
+    .input {
+      background-color: var(--text-input-field);
+      border: none;
+      border-radius: 8px;
+      height: 30px;
+      font-size: var(--md);
+      padding: 10px;
+      margin-bottom: 12px;
+    }
+
+    .input-name,
+    .input-email,
+    .input-password {
+      margin-bottom: 22px;
     }
 
     .primary-button {
@@ -101,32 +92,28 @@
       margin-top: 14px;
       margin-bottom: 30px;
     }
-
     @media (max-width:640px) {
-      .logo {
-        display: block;
+      .form-container {
+        height: 80%;
+        justify-content: space-between;
       }
-      
     }
-
-
   </style>
 </head>
 
 <body>
   <div class="login">
     <div class="form-container">
-      <img src="./logos/logo_yard_sale.svg" alt="logo" class="logo" />
-      <h1 class="title">Email has been sent!</h1>
-      <p class="subtitle">Please check your inbox for instructions on how to reset the password</p>
-      <div class="email-image">
-        <img src="./icons/email.svg" alt="email">
-      </div>
-      <button type="submit" class="primary-button login-button">Login</button>
-      <p class="resend">
-        <span>Didn`t  receive the email?</span>
-        <a href="/">Resend</a>
-      </p>
+      <h1 class="title">My account</h1>
+      <form class="form">
+        <label for="name" class="label">Name</label>
+        <input type="text" id="name" placeholder="Camila Yokoo" class="input input-name" />
+        <label for="name" class="label">Email address</label>
+        <input type="text" id="email" placeholder="camilayokoo@gmail.com" class="input input-email" />
+        <label for="password" class="label">Password</label>
+        <input type="password" id="password" placeholder="***********" class="input input-password" />
+      </form>
+      <input type="submit" value="Create" class="primary-button login-button">
     </div>
   </div>
 </body>
