--- a/account.html
+++ b/account.html
@@ -92,9 +92,13 @@
       margin-top: 14px;
       margin-bottom: 30px;
     }
+
     @media (max-width:640px) {
       .form-container {
-        height: 80%;
+        height: 100%;
+      }
+      .form {
+        height: 100%;
         justify-content: space-between;
       }
     }
@@ -106,14 +110,17 @@
     <div class="form-container">
       <h1 class="title">My account</h1>
       <form class="form">
-        <label for="name" class="label">Name</label>
-        <input type="text" id="name" placeholder="Camila Yokoo" class="input input-name" />
-        <label for="name" class="label">Email address</label>
-        <input type="text" id="email" placeholder="camilayokoo@gmail.com" class="input input-email" />
-        <label for="password" class="label">Password</label>
-        <input type="password" id="password" placeholder="***********" class="input input-password" />
+        <div>
+          <label for="name" class="label">Name</label>
+          <input type="text" id="name" placeholder="Camila Yokoo" class="input input-name" />
+          <label for="name" class="label">Email address</label>
+          <input type="text" id="email" placeholder="camilayokoo@gmail.com" class="input input-email" />
+          <label for="password" class="label">Password</label>
+          <input type="password" id="password" placeholder="***********" class="input input-password" />
+        </div>
+        <div><input type="submit" value="Create" class="primary-button login-button"></div>
       </form>
-      <input type="submit" value="Create" class="primary-button login-button">
+
     </div>
   </div>
 </body>
