--- a/editAccount.html
+++ b/editAccount.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My account</title>
+  <title>Edit account</title>
   <style>
     :root {
       --white: #FFFFFF;
@@ -60,27 +60,17 @@
       margin-bottom: 4px;
     }
 
-    .input {
-      background-color: var(--text-input-field);
-      border: none;
-      border-radius: 8px;
-      height: 30px;
+    .value{
+      color: var(--very-light-pink);
       font-size: var(--md);
-      padding: 10px;
-      margin-bottom: 12px;
+      margin: 8px 0 32 0;
     }
 
-    .input-name,
-    .input-email,
-    .input-password {
-      margin-bottom: 22px;
-    }
-
-    .primary-button {
-      background-color: var(--hospital-green);
+    .secondary-button {
+      background-color: var(--white);
       border-radius: 8px;
-      border: none;
-      color: var(--white);
+      border: 1px solid var(--hospital-green);
+      color: var(--hospital-green);
       width: 100%;
       cursor: pointer;
       font-size: var(--md);
@@ -97,6 +87,7 @@
       .form-container {
         height: 100%;
       }
+
       .form {
         height: 100%;
         justify-content: space-between;
@@ -112,13 +103,13 @@
       <form class="form">
         <div>
           <label for="name" class="label">Name</label>
-          <input type="text" id="name" placeholder="Camila Yokoo" class="input input-name" />
+          <p value="Camila Yokoo"></p>
           <label for="name" class="label">Email address</label>
-          <input type="text" id="email" placeholder="camilayokoo@gmail.com" class="input input-email" />
+          <p value="camilayokoo@gmail.com"></p>
           <label for="password" class="label">Password</label>
-          <input type="password" id="password" placeholder="***********" class="input input-password" />
+          <p value="***********"></p>
         </div>
-        <div><input type="submit" value="Create" class="primary-button login-button"></div>
+        <div><input type="submit" value="Edit" class="secondary-button login-button"></div>
       </form>
 
     </div>
