--- a/menuMobile.html
+++ b/menuMobile.html
@@ -62,6 +62,9 @@
     .sign-out {
       color: var(--hospital-green) !important;
     }
+    .mobile-menu  .divSign ul:nth-child(1){
+      border-bottom: 0;
+    }
 
   </style>
 </head>
@@ -101,7 +104,7 @@
         </li>
       </ul>
     </div>
-    <div>
+    <div class="divSign">
       <ul>
         <li>
           <a href="/" class="email">platzi@example.com</a>
