--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500;700&display=swap" rel="stylesheet">
-  <title>Document</title>
+  <title>Yard Sale: tienda online de cosas chidas</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
+<style>
+
+
+</style>
 
 <body>
   <nav>
@@ -45,9 +50,25 @@
         </li>
       </ul>
     </div>
+
+    <div class="desktop-menu inactive">
+      <ul>
+        <li>
+          <a href="/" class="title">My orders</a>
+        </li>
+
+        <li>
+          <a href="/">My account</a>
+        </li>
+
+        <li>
+          <a href="/">Sign out</a>
+        </li>
+      </ul>
+    </div>
   </nav>
 
+<script src="./js/main.js"></script>
 
 </body>
-
 </html>
