--- a/index.html
+++ b/index.html
@@ -66,7 +66,56 @@
         </li>
       </ul>
     </div>
+    <div class="mobile-menu inactive">
+      <div>
+        <ul>
+          <li>
+            <a href="/">CATEGORIES</a>
+          </li>
+          <li>
+            <a href="/">ALL</a>
+          </li>
+          <li>
+            <a href="/">CLOTES</a>
+          </li>
+          <li>
+            <a href="/">ELECTRONICS</a>
+          </li>
+          <li>
+            <a href="/">FURNITURES</a>
+          </li>
+          <li>
+            <a href="/">TOYS</a>
+          </li>
+          <li>
+            <a href="/">OTHERS</a>
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <a href="/">MY ORDERS</a>
+          </li>
+          <li>
+            <a href="/">MY ACCOUNT</a>
+          </li>
+        </ul>
+      </div>
+      <div class="divSign">
+        <ul>
+          <li>
+            <a href="/" class="email">platzi@example.com</a>
+          </li>
+          <li>
+            <a href="/" class="sign-out">Sign out</a>
+          </li>
+        </ul>
+      </div>
+    </div>
   </nav>
+  <section class="main-container">
+    <div class="cards-container">
+
+    </div>
 
 <script src="./js/main.js"></script>
 
