--- a/index.html
+++ b/index.html
@@ -1,26 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500;700&display=swap" rel="stylesheet">
-  <title>Yard Sale: tienda online de cosas chidas</title>
-  <link rel="stylesheet" href="css/style.css">
+
+  <link rel="stylesheet" href="./css/style.css">
+
+  <title>YardSale: tienda online de cositas chidas</title>
 </head>
-<style>
-
-
-</style>
-
 <body>
   <nav>
-    <img src="./icons/icon_menu.svg" alt="menu" class="menu" />
+    <img src="./icons/icon_menu.svg" alt="menu" class="menu">
+
     <div class="navbar-left">
-      <img src="./logos/logo_yard_sale.svg" alt="logo" class="logo" />
+      <img src="./logos/logo_yard_sale.svg" alt="logo" class="logo">
+
       <ul>
         <li>
           <a href="/">All</a>
@@ -42,10 +41,12 @@
         </li>
       </ul>
     </div>
-    <div class="navbar-rigth">
+
+    <div class="navbar-right">
       <ul>
-        <li class="navbar-email">platzy@example.com</li>
-        <li class="navbar-shopping-cart"> <img src="./icons/icon_shopping_cart.svg" alt="img-cart" class="img-cart" />
+        <li class="navbar-email">platzi@example.com</li>
+        <li class="navbar-shopping-cart">
+          <img src="./icons/icon_shopping_cart.svg" alt="shopping cart">
           <div>2</div>
         </li>
       </ul>
@@ -66,50 +67,49 @@
         </li>
       </ul>
     </div>
+
     <div class="mobile-menu inactive">
-      <div>
-        <ul>
-          <li>
-            <a href="/">CATEGORIES</a>
-          </li>
-          <li>
-            <a href="/">ALL</a>
-          </li>
-          <li>
-            <a href="/">CLOTES</a>
-          </li>
-          <li>
-            <a href="/">ELECTRONICS</a>
-          </li>
-          <li>
-            <a href="/">FURNITURES</a>
-          </li>
-          <li>
-            <a href="/">TOYS</a>
-          </li>
-          <li>
-            <a href="/">OTHERS</a>
-          </li>
-        </ul>
-        <ul>
-          <li>
-            <a href="/">MY ORDERS</a>
-          </li>
-          <li>
-            <a href="/">MY ACCOUNT</a>
-          </li>
-        </ul>
-      </div>
-      <div class="divSign">
-        <ul>
-          <li>
-            <a href="/" class="email">platzi@example.com</a>
-          </li>
-          <li>
-            <a href="/" class="sign-out">Sign out</a>
-          </li>
-        </ul>
-      </div>
+      <ul>
+        <li>
+          <a href="/">CATEGORIES</a>
+        </li>
+        <li>
+          <a href="/">All</a>
+        </li>
+        <li>
+          <a href="/">Clothes</a>
+        </li>
+        <li>
+          <a href="/">Electronics</a>
+        </li>
+        <li>
+          <a href="/">Furnitures</a>
+        </li>
+        <li>
+          <a href="/">Toys</a>
+        </li>
+        <li>
+          <a href="/">Other</a>
+        </li>
+      </ul>
+
+      <ul>
+        <li>
+          <a href="/">My orders</a>
+        </li>
+        <li>
+          <a href="/">My account</a>
+        </li>
+      </ul>
+
+      <ul>
+        <li>
+          <a href="/" class="email">platzi@example.com</a>
+        </li>
+        <li>
+          <a href="/" class="sign-out">Sign out</a>
+        </li>
+      </ul>
     </div>
   </nav>
 
@@ -176,37 +176,26 @@
       </button>
     </div>
   </aside>
+
   <section class="main-container">
     <div class="cards-container">
 
+      <!-- <div class="product-card">
+        <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
+        <div class="product-info">
+          <div>
+            <p>$120,00</p>
+            <p>Bike</p>
+          </div>
+          <figure>
+            <img src="./icons/bt_add_to_cart.svg" alt="">
+          </figure>
+        </div>
+      </div> -->
+
     </div>
   </section>
-  <aside class="product-detail">
-    <div class="product-detail-close">
-      <img src="./icons/icon_close.png" alt="close" />
-    </div>
-    <img src="./assets/bike.jpg" alt="bike" />
-    <div class="product-info">
-      <p>
-        $35.00
-      </p>
-      <p>Bike</p>
-      <p>
-        Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el
-        texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se
-        dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro
-        de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos
-        electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas
-        "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como
-        por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.
-      </p>
-      <button class="primary-button add-to-cart-button"><img src="./icons/bt_add_to_cart.svg" alt="add" />Add to
-        cart</button>
-    </div>
-  </aside>
 
   <script src="./js/main.js"></script>
-
 </body>
-
 </html>
